src/static/css/styles.css
body {
    margin: 0;
    padding: 0;
    font-size: 17px;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    font-weight: 500;
    color: #201600;
    background: #fafafa;
}

.css-logo {
    display: inline-block;
    vertical-align: middle;
    margin-right: 5px;
}

.css-logo i {
    display: block;
    width: 25px;
    height: 7px;
    margin-top: 3px;
    background: #201600
}

.css-logo i.t {
    margin-top: 0;
    border-radius: 0 4px 4px 4px
}

.css-logo i.m {
    border-radius: 4px 0 4px 4px
}

.css-logo i.b {
    width: 11px;
    border-radius: 0 4px 4px 4px
}

@media (max-width: 500px) {
    .css-logo i.t {
        border-radius: 0 3px 3px 3px
    }

    .css-logo i.m {
        border-radius: 3px 0 3px 3px
    }

    .css-logo i.b {
        border-radius: 0 3px 3px 3px
    }
}

.text-center {
    text-align: center;
}

.footer {
    position: sticky;
    height: 30px;
    top: calc(100vh - 30px);
    margin-bottom: 15px;
    font-size: 12px;
}

.new-version-alert {
    position: fixed;
    bottom: 50px;
    right: 50px;
    padding: 10px 20px;
    background: #fafafa;
    border-radius: 4px;
    box-shadow: 0 0 30px rgba(0, 0, 0, 0.25);
}

@media (max-width: 500px) {
    .new-version-alert {
        bottom: 20px;
        left: 10px;
        right: 10px;
    }
}

.header {
    font-size: 18px;
    font-weight: 700;
    padding: 10px 10px 1px 10px;
}

.header .header-inner {
    max-width: 1500px;
    margin: 0 auto;
}

.header .header-inner > a, .header .header-inner > div {
    display: inline-block;
    vertical-align: top;
}

.header a {
    text-decoration: none;
    color: #201600;
}

.content {
    max-width: 1500px;
    margin: 5% auto;
    padding: 10px;
    box-sizing: border-box;
    background: #fafafa;
    z-index: 1;
    line-height: 1.5em;
}

.content-with-sidebar .sidebar {
    display: none;
}

.content-with-sidebar .sidebar {
    width: 270px;
    margin-right: 10px;
    position: sticky;
    top: 0;
    overflow-y: auto;
    max-height: 100%;
}

.content-with-sidebar .sidebar .sidebar-item {
    margin: 10px 0;
    border-bottom: 1px solid #e2dfd9;
}

.content-with-sidebar .sidebar .sidebar-item.selected {
    font-weight: 700;
}

.content-with-sidebar .sidebar .sidebar-item:not(.retain-case) a {
    text-transform: uppercase;
}

.content-with-sidebar .sidebar .sidebar-item a {
    color: #201600;
    text-decoration: none;
}

.content-with-sidebar .sidebar-open-button {
    display: none;
}

@media (min-width: 768px) {
    .content-with-sidebar > div {
        display: inline-block;
        vertical-align: top;
    }

    .content-with-sidebar .sidebar {
        display: inline-block;
    }

    .content-with-sidebar .right-of-sidebar {
        width: calc(100% - 290px);
    }
}

@media (max-width: 768px) {
    .content-with-sidebar .sidebar-open-button {
        display: block;
        position: fixed;
        top: 0;
        right: 0;
        width: 32px;
        cursor: pointer;
        z-index: 9001;
    }

    .content-with-sidebar .sidebar-open-button img {
        width: 100%;
    }

    .content-with-sidebar .sidebar.open {
        display: block;
        position: fixed;
        width: 100%;
        top: 0;
        left: 0;
        padding: 0 10px;
        box-sizing: border-box;
        z-index: 9000;
        background: #fafafa;
        box-shadow: 0 0 7px rgba(0, 0, 0, 0.7);
    }
}

input {
    display: inline-block;
    width: 100%;
    margin: 8px 0;
    border: 1px solid #ccc;
    box-shadow: inset 0 1px 3px #ddd;
    border-radius: 4px;
    box-sizing: border-box;
    padding: 12px 20px;
    outline: none;
}

input:focus {
    border: 1px solid #555
}

.search-results .no-results {
    font-size: 12px;
}

#search-results-wrapper {
    position: relative;
}

#search-results-wrapper .loading-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.5);
    pointer-events: none;
    opacity: 0;
    transition-duration: 200ms;
}

#search-results-wrapper.loading .loading-overlay {
    pointer-events: all;
    opacity: 1;
}

#search-results-wrapper.open {
    min-height: 150px;
}

.spinner,
.spinner:before,
.spinner:after {
    border-radius: 50%;
    width: 2.5em;
    height: 2.5em;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
    -webkit-animation: load7 1.8s infinite ease-in-out;
    animation: load7 1.8s infinite ease-in-out;
}

.spinner {
    display: block;
    color: #201600;
    font-size: 10px;
    margin: 10px auto;
    position: relative;
    text-indent: -9999em;
    -webkit-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-animation-delay: -0.16s;
    animation-delay: -0.16s;
}

.spinner:before,
.spinner:after {
    content: '';
    position: absolute;
    top: 0;
}

.spinner:before {
    left: -3.5em;
    -webkit-animation-delay: -0.32s;
    animation-delay: -0.32s;
}

.spinner:after {
    left: 3.5em;
}

@-webkit-keyframes load7 {
    0%,
    80%,
    100% {
        box-shadow: 0 2.5em 0 -1.3em;
    }
    40% {
        box-shadow: 0 2.5em 0 0;
    }
}

@keyframes load7 {
    0%,
    80%,
    100% {
        box-shadow: 0 2.5em 0 -1.3em;
    }
    40% {
        box-shadow: 0 2.5em 0 0;
    }
}


.search-result {
    display: block;
    padding: 5px;
    margin: 3px 0;
    text-align: left;
    text-decoration: none;
    color: #201600;
    border: 1px solid #ccc;
}

.search-result em {
    font-style: normal;
    background: yellow;
}

.search-result .context-title {
    color: blue;
    font-size: 18px;
}

.search-result .context-link {
    font-size: 11px;
}

.guides {
    text-align: left;
}

.guides .guide {
    position: relative;
    padding: 15px;
    overflow: hidden;
    text-decoration: none;
    color: #fff;
    background: #201600;
    box-sizing: border-box;
    text-align: left;
    border-radius: 4px;
}

.guides .guide .icon-container {
    position: relative;
    display: inline-block;
    min-height: 45px;
    vertical-align: middle;
    padding: 5px;
    margin-right: 10px;
}

.guides .guide .icon-container img {
    width: 45px;
    image-rendering: -webkit-optimize-contrast;
}

.guides .guide .name,
.guides .guide .arrow {
    display: inline-block;
    vertical-align: middle;
}

.guides .guide .arrow {
    position: absolute;
    right: 12px;
    top: calc(50% - 8px);
    transition-duration: 100ms;
}

.guides .guide:hover .arrow {
    right: 8px;
}

.guides .guide .coming-soon {
    font-size: 11px;
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
}

.guides .guide-items {
    display: grid;
    justify-items: stretch;
    gap: 10px;
    grid-template-columns: repeat(2, calc(50% - 5px));
}

@media (max-width: 786px) {
    .guides .guide-items {
        display: block;
    }

    .guides .guide {
        display: block;

        width: 100%;
        margin: 10px 0;
        box-sizing: border-box;
    }
}

.code {
    position: relative;
    margin: 5px 0;
    white-space: pre;
    background: #201600;
    color: #fff;
    padding: 5px 0;
    box-shadow: inset 5px 5px 8px rgb(0 0 0);
    overflow-y: auto;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
}

.code .title {
    padding: 0 10px;
    font-weight: 500;
}

.code .line {
    padding: 0 10px;
    font-family: monospace;
}

.code.language-typescript .line {
    /* Because HLJS is broken w/ TS optional types */
    color: #f92672;
}

.code .line.highlight {
    background: #383830;
}

.code .line .line-number {
    display: inline-block;
    width: 14px;
    padding-right: 10px;
    user-select: none;
    color: #fff;
}

.top-right, .screenshot-link {
    position: absolute;
    top: 5px;
    right: 5px;
    font-size: 12px;
    text-align: center;
}

.top-right a {
    color: #fff;
    text-decoration: none;
}

.top-right > * {
    margin-left: 10px;
    font-size: 12px;
}

.top-right > * > * {
    display: inline-block;
    vertical-align: middle;
}

.top-right .copy {
    cursor: pointer;
}

.top-right .copy * {
    pointer-events: none;
}

.index-guide-item .index-guide-link img {
    width: 16px;
}

.index-guide-item h2 {
    margin-top: 30px;
}

.screenshot, .code, .related-parameter, .api-resource-header, .CodeMirror, .example-iframe {
    box-shadow: 0 0 30px rgba(32, 22, 0, 0.25);
    border-radius: 3px;
}

.screenshot {
    position: relative;
    margin: 10px 0;
    padding: 0 0 35px 0;
    text-align: center;
    background: #201600;
    color: #fff;
}

.screenshot .title {
    font-weight: 500;
    padding: 10px 0 15px 10px;
    text-align: left;
}

.screenshot .screenshot-image {
    max-width: calc(100% - 30px);
    box-sizing: border-box;
    margin: auto 15px;
    box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
    border-radius: 5px;
    background: #fafafa;
    padding: 15px;
}

.related-parameter, .api-resource-header {
    margin: 10px 0;
    padding: 5px 10px;
    background: #201600;
    color: #fff;
    font-size: 13px;
}

.related-parameter span, .api-resource-header span {
    font-family: monospace;
}

.related-parameter span.as, .api-resource-header span.as {
    color: deeppink;
}

.related-parameter a, .related-parameter a a {
    color: #fff;
}

.pagination .btn {
    display: inline-block;
    margin-bottom: 10px;
    padding: 7px 10px;
    border-radius: 5px;
    font-size: 15px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
    background: #201600;
    color: #fff;
    text-decoration: none;
    border: none;
    cursor: pointer;
}

.pagination .btn.prev {
    float: left;
}

.pagination .btn.next {
    float: right;
}

